--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "@tauri-apps/api": "^1",
+    "@intlify/core-base": "^10.0.0-beta.5",
+    "@tauri-apps/api": "^1.6.0",
+    "@xterm/xterm": "^5.5.0",
     "petite-vue-i18n": "^10.0.0-beta.5",
     "pinia": "^2.2.1",
-    "vue": "^3.3.4",
-    "vue-router": "4"
+    "tauri-pty": "^0.0.8",
+    "vee-validate": "^4.13.2",
+    "vue": "^3.3.4"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1",
