--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   "dependencies": {
     "@intlify/core-base": "^10.0.0-beta.5",
     "@tauri-apps/api": "^1.6.0",
+    "@xterm/addon-fit": "^0.10.0",
     "@xterm/xterm": "^5.5.0",
     "petite-vue-i18n": "^10.0.0-beta.5",
     "pinia": "^2.2.1",
     "tauri-pty": "^0.0.8",
     "vee-validate": "^4.13.2",
-    "vue": "^3.3.4"
+    "vite-svg-loader": "^5.1.0",
+    "vue": "^3.3.4",
+    "vue-router": "^4.4.3"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1",
