--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "free-speak"
-version = "0.0.0"
+name = "simple-terminal"
+version = "1.0.0"
 description = "A Tauri App"
-authors = ["you"]
+authors = ["Dawid Kwasowski"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -11,7 +11,7 @@ edition = "2021"
 tauri-build = { version = "1", features = [] }
 
 [dependencies]
-tauri = { version = "1", features = [ "macos-private-api", "shell-open"] }
+tauri = { version = "1", features = [ "api-all", "macos-private-api"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tauri-plugin-pty = "0.0.8"
